--- a/style.css
+++ b/style.css
@@ -25,6 +25,12 @@ body {
     border: solid 1px black;
 }
 
+.splash-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .main {
     width: 65%;
     border: solid 1px black;
