Add logo on top of splash image

--- a/style.css
+++ b/style.css
@@ -31,6 +31,18 @@ body {
     object-fit: cover;
 }
 
+.splash-image .logo {
+    background-color: black;
+    color: white;
+    opacity: 50%;
+    position: relative;
+    width: 100%;
+    bottom: 80%;
+    text-align: center;
+    font-size: 40px;
+    padding: 15px;
+}
+
 .main {
     width: 65%;
     border: solid 1px black;
