--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     height: 100vh;
     justify-content: center;
     align-items: center;
+    font-family: "Roboto", "Helvetica", "Arial", sans-serif;
 }
 
 .wrapper {
