--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
 
 .splash-image {
     width: 35%;
+    min-width: 245px;
     border: solid 1px black;
 }
 
@@ -49,16 +50,29 @@ body {
     align-items: center;
     justify-content: center;
     width: 65%;
+    min-width: 468px;
     border: solid 1px black;
     padding: 50px;
 }
 
-form > div {
+
+/*form > p {
     padding-right: 10px;
     padding-top: 10px;
+}*/
+    
+form {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 20px;
 }
 
-div > label {
+.form-email,
+.form-birthdate {
+    grid-column: 1 / 3;
+}
+
+p > label {
     font-size: 10px;
 }
 
@@ -66,9 +80,6 @@ input, label {
     display: block;
 }
 
-.form-first-name,
-.form-last-name,
-.form-password {
-    float: left;
+input {
+    width: 100%;
 }
-
