--- a/style.css
+++ b/style.css
@@ -19,12 +19,15 @@ body {
     width: 80vw;
     max-width: 1000px;
     height: 700px;
+    border: solid 1px rgb(235, 235, 235);
+    border-radius: 15px;
+    padding: 15px;
+    box-shadow: 10px 5px 5px rgb(202, 202, 202);
 }
 
 .splash-image {
-    width: 35%;
+    width: 40%;
     min-width: 245px;
-    border: solid 1px black;
 }
 
 .splash-image img {
@@ -49,27 +52,38 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    width: 65%;
+    width: 60%;
     min-width: 468px;
-    border: solid 1px black;
     padding: 50px;
 }
 
-
-/*form > p {
-    padding-right: 10px;
-    padding-top: 10px;
-}*/
+.hype-text {
+    margin-bottom: 15px;
+    font-size: 20px;
+}
     
 form {
     display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-gap: 20px;
+    grid-gap: 10px;
 }
 
 .form-email,
-.form-birthdate {
+.form-birthdate,
+.form-submit {
     grid-column: 1 / 3;
+}
+
+input[type='text'],
+input[type='email'],
+input[type='date'],
+input[type='password'] {
+    height: 35px;
+}
+
+input[type='submit'] {
+    margin-top: 25px;
+    height: 45px;
 }
 
 p > label {
