--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body {
     bottom: 80%;
     text-align: center;
     font-size: 40px;
+    font-weight: bold;
     padding: 15px;
 }
 
@@ -60,6 +61,7 @@ body {
 .hype-text {
     margin-bottom: 15px;
     font-size: 20px;
+    font-weight: bold;
 }
     
 form {
