--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
     border: solid 1px #D7CED3;
     border-radius: 15px;
     padding: 15px;
-    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.171);
+    box-shadow: 10px 5px 5px rgba(0, 0, 0, 0.170);
     background-color: var(--snow);
 }
 
@@ -49,18 +49,18 @@ body {
     border-radius: 5px;
 }
 
-.splash-image .logo {
+/* .splash-image .logo {
     background-color: black;
     color: white;
     opacity: 50%;
     position: relative;
     width: 100%;
-    bottom: 80%;
+    bottom: 30%;
     text-align: center;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: bold;
-    padding: 15px;
-}
+    padding: 10px;
+} */
 
 .main {
     display: flex;
