--- a/style.css
+++ b/style.css
@@ -72,8 +72,8 @@ body {
 }
 
 .hype-text {
-    margin-bottom: 15px;
-    font-size: 26px;
+    margin-bottom: 25px;
+    font-size: 30px;
     font-weight: bold;
 }
     
@@ -94,6 +94,12 @@ input[type='email'],
 input[type='date'],
 input[type='password'] {
     height: 35px;
+    padding: 2px 0 2px 8px;
+}
+
+input:focus {
+    border: 1px solid var(--cadet-blue-crayola);
+    box-shadow: 5px 5px 5px var(--cadet-blue-crayola);
 }
 
 input[type='submit'] {
