Add style for invalid focused form elements

--- a/style.css
+++ b/style.css
@@ -102,6 +102,14 @@ input:focus {
     box-shadow: 5px 5px 5px var(--cadet-blue-crayola);
 }
 
+input:invalid {
+    border: 1px solid red;
+}
+
+input:focus:invalid {
+    box-shadow: 5px 5px 5px red;
+}
+
 input[type='submit'] {
     margin-top: 25px;
     height: 45px;
